applied IntelliJ suggestions and fixes